<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_delete" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/delete_button"
            android:layout_margin="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="417dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_person"
                    app:civ_border_color="#000000"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_toEndOf="@id/user_profile"
                    android:text="@string/user_name"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_profile_name"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/user_profile"
                    android:text="@string/user_email"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/user_about_self"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_email"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/user_profile"
                    android:text="@string/about_myself"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/edu_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_profile"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/edu_details"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_univ_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edu_details"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/univ_name"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/user_edu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/usr_univ_name"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/usr_univ_deg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/univ_degree"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/in"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/usr_univ_major"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/univ_major"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/user_edu_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_edu"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/univ_start_date"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/dash"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/univ_end_date"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/proj_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_edu_duration"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/proj_details"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/usr_proj_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/proj_details"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/proj_name"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/usr_proj_skills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/usr_proj_name"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/skills"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/usr_proj_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/usr_proj_skills"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/proj_desc"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorGreen"
            android:text="@string/send_email"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>