<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/portfolio_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/portfolio" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:targetApi="o">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:ems="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:ems="10" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_pin_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/pin"
        android:hint="@string/pin"
        android:inputType="textPassword"
        tools:targetApi="o">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:ems="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_pin_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/show_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_account_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/admin_login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_verify_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorPurple"
        android:text="@string/admin_verify"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>