<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_profile_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/select_photo"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/create_account_profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            app:civ_border_color="#000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/create_account_profile_button"
            app:layout_constraintEnd_toEndOf="@+id/create_account_profile_button"
            app:layout_constraintStart_toStartOf="@+id/create_account_profile_button"
            app:layout_constraintTop_toTopOf="@+id/create_account_profile_button" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_account_profile_image"
            android:layout_margin="8dp"
            android:autofillHints="@string/first_name"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_profile_name"
                android:ems="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name_text"
            android:layout_margin="8dp"
            android:autofillHints="@string/last_name"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_profile_name"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name_text"
            android:layout_margin="8dp"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_text"
            android:layout_margin="8dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorAccent"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sec_password_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_text"
            android:layout_margin="8dp"
            android:autofillHints="@string/password2"
            android:hint="@string/password2"
            android:inputType="textPassword"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorAccent"
            tools:targetApi="o">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sec_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sec_password_text"
            android:padding="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_state"
            android:layout_margin="8dp"
            android:backgroundTint="@color/colorGreen"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>